# vertexai-search-reco

./: .gitignore  README.md  clean_data.py  fix_bigquery_data.sql  generate_sample_data.py  pyproject.toml  requirements.txt
data_prep/: README.md  cli.py
docs/: CUSTOM_SCHEMA_GUIDE.md
examples/: .env-example  config.json  custom_media_config.json  custom_media_mapping.json  customer_config.json  customer_schema.json  drama_shorts_schema.json  example_media_config.json  example_media_mapping.json  example_media_sample_data.json  media_config.json  media_field_mapping.json  sample_cleaned_data.json  sample_data.json  sample_media_data.json  sample_schema.json
src/: __init__.py
src/_generic/autocomplete/: autocomplete_manager.py  cli.py
src/_generic/data_store/: cli.py  client_manager.py  main.py  schema_manager.py
src/_generic/recommendation/: __init__.py  recommendation_manager.py
src/_generic/search/: cli.py
src/autocomplete/: manager.py
src/data_prep/: processor.py
src/data_store/: cli.py  dataset_manager.py  datastore_manager.py  document_manager.py  gcs_manager.py  manager.py  schema_manager.py
src/media_data_store/: README.md  SCHEMA_UPDATE_GUIDE.md  __init__.py  auth.py  bigquery_manager.py  cli.py  config.py  custom_data_transformer.py  datastore_manager.py  google_media_validator.py  schema_mapper.py  utils.py
src/media_engine/: README.md  cli.py  engine_manager.py
src/media_reco/: config.py  recommendation_manager.py
src/media_search/: README.md  cli.py  config.py  search_manager.py
src/recommendation/: cli.py  manager.py
src/search/: __init__.py  cli.py  manager.py  search_manager.py
src/shared/: auth.py
v0/: README.md  pyproject.toml  requirements.txt
v0/examples/: example_media_config.json
v0/src/media_data_store/: bigquery_manager.py  config.py  datastore_manager.py  schema_mapper.py
v0/src/media_engine/: README.md  __init__.py  config.py  engine_manager.py
v0/src/media_reco/: cli.py
v0/src/media_search/: config.py  search_manager.py
v1/: README.md  bigquery_ops.py  config.py  data_transformer.py  jsonl_to_json.py  requirements.txt  search_ops.py  user_event_ops.py  vais.py  vertexai_ops.py
v1/examples/: sample_events.csv
v1/scripts/: import-events-csv.sh  user-events.sh
v1/shell/: append-events.sh  import-events-csv.sh  quick-setup.sh  user-events.sh
vertex_search/: __init__.py  cli.py  config.py  data_generator.py  interfaces.py  managers.py  utils.py
vertex_search/managers/: __init__.py  autocomplete_manager.py  bigquery_manager.py  dataset_manager.py  media_asset_manager.py  recommendation_manager.py  search_manager.py
vertex_search/managers/media_asset_manager/: main.py  (+5 more)
(+6 files in other folders)
